<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.blaid.tasker.EditProfile"
    tools:showIn="@layout/activity_edit_profile"
    android:background="@drawable/alt_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name:"
        android:id="@+id/textView9"
        android:fontFamily="Monaco"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/cancelId"
        android:layout_alignStart="@+id/cancelId" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:paddingLeft="5dp"
        android:textSize="17dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/Username"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/imageView4"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:text="Cancel"
        android:id="@+id/cancelId"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/red_button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignTop="@+id/startID"
        android:layout_toLeftOf="@+id/textView15"
        android:layout_toStartOf="@+id/textView15" />

    <Spinner
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/spin"
        android:entries="@array/Task_Types"
        android:background="@drawable/default_button"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:text="Save"
        android:id="@+id/startID"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/green_button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginBottom="95dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp" />

    <EditText
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:hint="Enter a description of yourself..."
        android:paddingLeft="5dp"
        android:textSize="17dp"
        android:ems="10"
        android:id="@+id/editText5"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:layout_toEndOf="@+id/textView15"
        android:layout_marginTop="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Bio:"
        android:id="@+id/textView15"
        android:textColor="#ffffffff"
        android:layout_marginTop="103dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
