...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Username"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textViewUsername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
       />

    <ImageView
        android:layout_width="wrap_content"
...
        android:minWidth="200sp"
        android:nestedScrollingEnabled="true"
        android:layout_marginRight="20sp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView6"
        android:layout_alignRight="@+id/taskHistory"
        android:layout_alignEnd="@+id/taskHistory" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
