<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.CreateAccountActivity.CreateAccountActivity"
    tools:showIn="@layout/activity_create_account"
    android:background="@color/colorBackground">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="E-mail"
        android:width="320sp"
        android:paddingTop="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="@string/Password"
        android:width="320sp"
        android:password="true"
        android:paddingTop="20sp"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordConfirm"
        android:hint="@string/confirmPwd"
        android:width="320sp"
        android:password="true"
        android:paddingTop="20sp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUsername"
        android:hint="@string/Username"
        android:paddingTop="20sp"
        android:width="320sp"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/createButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:width="320sp"
        android:shadowColor="#000000"
        android:textSize="16sp"
        android:background="@color/colorAccent"
        android:typeface="monospace"
        android:textColor="@color/colorBackground" />

</RelativeLayout>
