<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_login"
    android:background="#008fff">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/Username"
        android:width="320dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/Password"
        android:width="320dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignInButtonText"
        android:id="@+id/clicktosignin"
        android:background="#eeee1b"
        android:textColor="#008fff"
        android:width="320sp"
        android:onClick="signin"
        android:layout_marginTop="40sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:textStyle="bold"
        android:textSize="16sp"
        android:typeface="monospace" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUpButtonText"
        android:id="@+id/clicktosignup"
        android:layout_marginTop="40sp"
        android:background="#eeee1b"
        android:textColor="#008fff"
        android:width="320sp"
        android:onClick="signup"
        android:layout_below="@+id/clicktosignin"
        android:layout_alignLeft="@+id/clicktosignin"
        android:layout_alignStart="@+id/clicktosignin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ForgotUsernameText"
        android:id="@+id/textView2"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:clickable="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ForgotPasswordText"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:clickable="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_action_logo"
        android:minWidth="200sp"
        android:minHeight="200sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
